--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,15 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     # Only react to merged PRs for security reasons.
     # See https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#pull_request_target.
-#    if: >
-#      github.event.pull_request.merged
-#      && (
-#        github.event.action == 'closed'
-#        || (
-#          github.event.action == 'labeled'
-#          && contains(github.event.label.name, 'backport')
-#        )
-#      )
+    if: >
+      github.event.pull_request.merged
+      && (
+        github.event.action == 'closed'
+        || (
+          github.event.action == 'labeled'
+          && contains(github.event.label.name, 'backport')
+        )
+      )
+    env:
+      PR_NUMBER: ${{ github.event.pull_request.number }}
+      PR_TITLE: ${{ github.event.pull_request.name }}
+
+    ## vars PR_number,
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -28,15 +33,20 @@ jobs:
 
       - name: Fetch PR branch
         run: |
-          git fetch origin main
-          git fetch origin pull/${{ github.event.pull_request.number }}/head:backport
-          COMMITS=$(git log --format="%H" main..backport)
-          echo "$COMMITS"
-          echo "$COMMITS" > commits.txt
+
+#          git fetch origin main
+#          git fetch origin pull/${{ env.PR_NUMBER }}/head:backport
+#          COMMITS=$(git log --format="%H" main..backport)
+#          echo "$COMMITS"
+#          echo "$COMMITS" > commits.txt
 
       # api call for merge commit sha insted
+      # create variable with the sha
 
-
+      - name: Authenticate GitHub CLI
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       ## GH token/ app token/PAT
       # gh api or gh cli
@@ -44,6 +54,9 @@ jobs:
         run: |
           git config user.name "adela-domokosova"
           git config user.email "adela.domokosova@gmail.com"
+               
+          git checkou -B backport/pr-${{ env.PR_NUMBER }}
+          git clone 
           git checkout prod
           
           failed=0
@@ -59,16 +72,16 @@ jobs:
 
           if [ "$failed" -eq 1 ]; then
             echo "Fail, comment"
-            curl -s -X POST \
-              -H "Authorization: token $GITHUB_TOKEN" \
-              -H "Content-Type: application/json" \
-              -d "{\"body\":\"Cannot cherry-pick due to merge conflict.\"}" \
-              "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            gh pr comment ${{ env.PR_NUMBER }} --body "Cannot cherrypick due to conflict."
             exit 1
           else
             echo "Cherry-pick OK, pushing..."
-            git push origin backport/prod-${{ github.event.pull_request.number }}
-            
+
+        # push
+            git push origin backport/prod-${{ env.PR_NUMBER }}
+        # create PR
+               
+            gh pr --title "Backport ${{ env.PR_TITLE }}"
             curl -s -X POST \
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Content-Type: application/json" \
