--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: testMessage
-        run: gh pr comment ${{ env.PR_NUMBER }} --body "Cannot cherrypick due to conflict."
+        run: gh pr comment ${{ env.PR_NUMBER }} --body "Cannot cherrypick due to conflict." --repo "pepepopo-bot/test-repo"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
