--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,6 @@ name: test.yml
 on:
   pull_request:
     types: [ labeled, opened, closed, reopened ]
-  push:
 
 jobs:
   PR-message:
@@ -11,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: testMessage
-        run: gh pr comment ${{ env.PR_NUMBER }} --body "Cannot cherrypick due to conflict." --repo "pepepopo-bot/test-repo"
+        run: gh pr comment $env.PR_NUMBER --body "Cannot cherrypick due to conflict." --repo "pepepopo-bot/test-repo"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
