--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,3 +13,14 @@ jobs:
         run: gh pr comment 93 --body "Cannot cherrypick due to conflict." --repo "pepepopo-bot/test_repo"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: API comment
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ env.GH_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/pepepopo-bot/test_repo/pulls/93/comments \
+            -d '{"body":"Great stuff!","commit_id":"6dcb09b5b57875f334f61aebed695e2e4193db5e","path":"file1.txt","start_line":1,"start_side":"RIGHT","line":2,"side":"RIGHT"}'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
