--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
             -H "Authorization: Bearer $PAT" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/pepepopo-bot/test_repo/pulls/$PR-NUMBER/comments \
-            -d '{"body":"Great stuff!","commit_id":"6dcb09b5b57875f334f61aebed695e2e4193db5e","path":"file1.txt","start_line":1,"start_side":"RIGHT","line":2,"side":"RIGHT"}'
+            -d '{"body":"Great stuff!"}'
         env:
           PAT: ${{ secrets.PAT }}
           PR-NUMBER: ${{ github.event.pull_request.number }}
