--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
   PR-message:
     permissions: write-all
     env:
-      PR-NUMBER: ${{ github.event.pull_request.number }}
+      PR_NUMBER: ${{ github.event.pull_request.number }}
     runs-on: ubuntu-latest
     steps:
 #      - name: testMessage
@@ -21,8 +21,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $PAT" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/pepepopo-bot/test_repo/pulls/$PR-NUMBER/comments \
+            https://api.github.com/repos/pepepopo-bot/test_repo/pulls/$PR_NUMBER/comments \
             -d '{"body":"Great stuff!"}'
         env:
           PAT: ${{ secrets.PAT }}
-          PR-NUMBER: ${{ github.event.pull_request.number }}
