--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -2,9 +2,11 @@ name: backport.yml
 on:
     #pull_request:
     #  types: [ closed, labeled ]
-    pull_request_target:
-      types: [ labeled, closed ]
-
+    #pull_request_target:
+    #  types: [ labeled, closed ]
+  label:
+    types:
+      - "created"
 jobs:
   backport:
     name: Backport
@@ -29,7 +31,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
 
       - name: Fetch PR branch
         run: |
