--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,7 @@
 name: test.yml
 on:
-  pull_request:
-    types: [ labeled, opened, closed, reopened ]
-
+  pull_request_target:
+    types: [ labeled, closed ]
 jobs:
   PR-message:
     permissions: write-all
@@ -14,14 +13,14 @@ jobs:
 #        run: gh pr comment 93 --body "Cannot cherrypick due to conflict." --repo "pepepopo-bot/test_repo"
 #        env:
 #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: API comment
+      - name: Open PR from fork
         run: |
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $PAT" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/pepepopo-bot/test_repo/pulls/$PR_NUMBER/comments \
-            -d '{"body":"Great stuff!"}'
+            https://api.github.com/repos/pepepopo-bot/test_repo/pulls \
+            -d '{"title":"Amazing new feature","body":"Please pull these awesome changes in!","head":"adela-domokosova:backport","base":"main"}'
         env:
-          PAT: ${{ secrets.PAT }}
+          PAT: ${{ secrets.GITHUB_TOKEN }}
