fix diff main vs pr-branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,30 +9,35 @@ jobs:
     if: github.event.label.name == 'backport'
     runs-on: ubuntu-latest
     permissions:
+      # možna upravit práva
       contents: write
       pull-requests: write
     env:
-      BACKPORT_TARGET_BRANCH: prod
-      BACKPORT_BRANCH: backport/pr-${{ github.event.pull_request.number }}
+      BACKPORT_TARGET_BRANCH: prod #branch kam chci přidat ty PR commity
+      BACKPORT_BRANCH: backport/pr-${{ github.event.pull_request.number }} #nová branch pro push a vytvoreni PR
+      PR_BASE_BRANCH: ${{ github.event.pullrequest.base.ref }}
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ env.BACKPORT_TARGET_BRANCH }}
+          ref: ${{ env.PR_BASE_BRANCH }}
           fetch-depth: 0
+      # checkout target branch PR (main)
 
       - run: |
           git fetch origin pull/${{ github.event.pull_request.number }}/head:pr-branch
+        #získám kod PR a uložím si ho jako pr-brach
 
       - id: commits
         run: |
-          git log --format="%H" ${{ env.BACKPORT_TARGET_BRANCH }}..pr-branch > commits.txt
-
+          git log --format="%H" ${{ env.PR_BASE_BRANCH }}..pr-branch > commits.txt
+        #porovnat branche a zapsat diff commity
       - name: Configure Git identity
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - run: |
+      - name: add message for conflict
+        run: |
           git checkout -b ${{ env.BACKPORT_BRANCH }}
           while read -r sha; do
             git cherry-pick "$sha" || {
@@ -56,4 +61,5 @@ jobs:
               --arg base "${{ env.BACKPORT_TARGET_BRANCH }}" \
               '{title: $title, body: $body, head: $head, base: $base}')"
 # možnost konfliktu
-
+# ! [remote rejected] backport/pr-100 -> backport/pr-100 (refusing to allow a GitHub App to create or update workflow .github/workflows/test.yml without workflows permission) error: failed to push some refs to 'https://github.com/pepepopo-bot/test_repo' Error: Process completed with exit code 1.
+# nejdou takto backportovat změny workflows -> gh token nemá právo workflows: write
