--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
           ref: ${{ env.PR_BASE_BRANCH }}
           fetch-depth: 0
       # checkout target branch PR (main)
+      # github.event.pull_request.head.sha is the right way to get SHA of the most recent commit before the pull request was closed.
 
       - run: |
           git fetch origin pull/${{ github.event.pull_request.number }}/head:pr-branch
@@ -63,3 +64,8 @@ jobs:
 # možnost konfliktu
 # ! [remote rejected] backport/pr-100 -> backport/pr-100 (refusing to allow a GitHub App to create or update workflow .github/workflows/test.yml without workflows permission) error: failed to push some refs to 'https://github.com/pepepopo-bot/test_repo' Error: Process completed with exit code 1.
 # nejdou takto backportovat změny workflows -> gh token nemá právo workflows: write
+
+#je toto použilené v případě, kdy už bylo PR merged a pak se přidá label?
+
+#  ref: ${{ github.event.pull_request.head.sha }} use this insted of "refs/pull/${{ github.event.number }}/merge" -> raději volat fixed sha commit, menší riziko prohození kodu
+# or Checkout refs/pull/${{ github.event.number }}/merge and then verify HEAD^ equals github.event.pull_request.head.sha
