--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
+      - name: Fetch PR branch
+        run: git fetch origin pull/${{ github.event.pull_request.number }}/head:pr-branch
+
       - name: Get PR commit SHAs
         run: |
           curl -s \
@@ -39,6 +42,7 @@ jobs:
       # nelze dělat rozdíl větví, je nutné přes api získat jen commity toho PR
 
       - name: add message for conflict
+        id: cherry
         run: |
           git checkout -b ${{ env.BACKPORT_BRANCH }}
           while read -r sha; do
@@ -51,6 +55,7 @@ jobs:
 
       - name: Comment PR if conflict
       #add some condition to only run when conflict arises
+      #  if: steps.cherry.outcome ==
         uses: thollander/actions-comment-pull-request@v3
         with:
           message: |
