--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   backport:
-    #if: github.event.label.name == 'backport' && github.event.pull_request.merged == true
+    if: github.event.label.name == 'backport-prod'
     runs-on: ubuntu-latest
     permissions:
       contents: write
