--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,7 +5,7 @@ on:
 
 
 jobs:
-  backport:
+  test:
     if: github.event.label.name == 'backport-prod'
     runs-on: ubuntu-latest
     permissions:
