--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -5,7 +5,7 @@ on:
     types: [labeled]
 jobs:
   Backport:
-    if: github.event.pull_request.merged == true && startsWith(github.event.label.name, 'backport-')
+    if: startsWith(github.event.label.name, 'backport-')
     # toto bude problém v případě zavření PR bez labelu? -> startsWith(github.event.label.name, 'backport-')
     runs-on: ubuntu-latest
     permissions:
