--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -5,8 +5,6 @@ on:
     types: [labeled]
 jobs:
   backport:
-    #if: startsWith(github.event.label.name, 'backport-')
-    # toto bude problém v případě zavření PR bez labelu? -> startsWith(github.event.label.name, 'backport-')
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -14,12 +12,10 @@ jobs:
     steps:
       - name: Set environment variables
         run: |
-        # set backport target branch from triggering label
           LABEL=${{ github.event.label.name }}
           BRANCH="${LABEL#backport-}"
           echo "BACKPORT_TARGET=$BRANCH" >> $GITHUB_ENV
-        # set backport branch for PR
-          BACKPORT="backport/pr-${{ github.event.pull_request.number }}-${{ env.BACKPORT_TARGET }}"
+          BACKPORT="backport/pr-${{ github.event.pull_request.number }}-$BACKPORT_TARGET"
           echo "BACKPORT_BRANCH=$BACKPORT" >> $GITHUB_ENV
 
       - name: Checkout backport target branch
@@ -32,18 +28,13 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "<>"
-      # https://github.com/orgs/community/discussions/41101
 
-      #fetch pullrequest base????
-
-      # vim že mužu počitat s merge commitem -> vezmu leveho parenta (commity z feature větve) od jednomo merge commitu k předposlednimu jen ne přes main ale přes feature větev
       - name: Get PR commits and cherry-pick
+        id: cherry-pick
         run: |
           COMMITS=$(git log --pretty-format:"%H" --reverse ${{ github.event.pull_request.merge_commit_sha }}^1..${{ github.event.pull_request.merge_commit_sha }}^2)
           echo "$COMMITS" >> commits.txt
-        #uložit commity?
-        #spojit dohromady s těmi cherry pick a fetch?
-          git checkout -b ${{ env.BACKPORT_BRANCH }}
+          git checkout -b $BACKPORT_BRANCH
           conflict=false
           while read -r sha; do
           if ! git cherry-pick "$sha"; then
@@ -52,16 +43,16 @@ jobs:
             conflict=true
           fi
           done < commits.txt
-          echo "conflict=$conflict" >> "$GITHUB_OUTPUT"
+          echo "conflict=$conflict" >> $GITHUB_OUTPUT
 
-      - run: git push origin ${{ env.BACKPORT_BRANCH }}
-        ## přidat k jinemu kroku
+      - run: git push origin $BACKPORT_BRANCH
+
 
       - name: Comment PR if conflict
         #if: ???
         uses: actions/github-script@v7
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
@@ -79,11 +70,9 @@ jobs:
                 title: 'Backport PR #${{ github.event.pull_request.number }} to ${{ env.BACKPORT_TARGET }}',
                 owner,
                 repo,
-                head: '${{ env.BACKPORT_BRANCH }}',
-                base: '${{ env.BACKPORT_TARGET }}',
-                body: [
-                  'This PR is auto-generated.',
-                ].join('\n')
+                head: process.env.BACKPORT_BRANCH,
+                base: process.env.BACKPORT_TARGET,
+                body: 'This PR is auto-generated.'
               });
               github.rest.issues.addLabels({
                 owner,
@@ -91,3 +80,6 @@ jobs:
                 issue_number: result.data.number,
                 labels: []
               });
+
+    #if: startsWith(github.event.label.name, 'backport-')
+    # toto bude problém v případě zavření PR bez labelu? -> startsWith(github.event.label.name, 'backport-')
