--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -77,8 +77,7 @@ jobs:
               github.rest.issues.addLabels({
                 owner,
                 repo,
-                issue_number: result.data.number,
-                labels: ['backport']
+                issue_number: result.data.number
               });
 
     #if: startsWith(github.event.label.name, 'backport-')
