--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -33,23 +33,21 @@ jobs:
         id: cherry-pick
         run: |
           COMMITS=$(git log --pretty="format:%H" --reverse ${{ github.event.pull_request.merge_commit_sha }}^1..${{ github.event.pull_request.merge_commit_sha }}^2)
-          echo "$COMMITS" >> commits.txt
           git checkout -b $BACKPORT_BRANCH
-          conflict=false
           while read -r sha; do
           if ! git cherry-pick "$sha"; then
             echo "Conflict in $sha"
             git cherry-pick --abort
             conflict=true
+            echo "conflict=true" >> $GITHUB_OUTPUT
+            exit 1
           fi
-          done < commits.txt
-          echo "conflict=$conflict" >> $GITHUB_OUTPUT
-
-      - run: git push origin $BACKPORT_BRANCH
-
+          done < $COMMITS
+          git push origin $BACKPORT_BRANCH
+          echo "conflict=false" >> $GITHUB_OUTPUT
 
       - name: Comment PR if conflict
-        #if: ???
+        if: steps.cherry-pick.outputs == true
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -62,6 +60,7 @@ jobs:
             })
 
       - name: Create Pull Request
+        if: steps.cherry-pick.outputs == false
         uses: actions/github-script@v7
         with:
           script: |
