--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -33,6 +33,7 @@ jobs:
         id: cherry-pick
         run: |
           COMMITS=$(git log --pretty="format:%H" --reverse ${{ github.event.pull_request.merge_commit_sha }}^1..${{ github.event.pull_request.merge_commit_sha }}^2)
+          echo "$COMMITS"
           git checkout -b $BACKPORT_BRANCH
           while read -r sha; do
           if ! git cherry-pick "$sha"; then
