--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -33,7 +33,7 @@ jobs:
         id: cherry-pick
         run: |
           COMMITS=$(git log --pretty="format:%H" --reverse ${{ github.event.pull_request.merge_commit_sha }}^1..${{ github.event.pull_request.merge_commit_sha }}^2)
-          echo "$COMMITS"
+          echo "$COMMITS" >> commits.txt
           git checkout -b $BACKPORT_BRANCH
           while read -r sha; do
           if ! git cherry-pick "$sha"; then
@@ -43,7 +43,7 @@ jobs:
             echo "conflict=true" >> $GITHUB_OUTPUT
             exit 1
           fi
-          done < $COMMITS
+          done < commits.txt
           git push origin $BACKPORT_BRANCH
           echo "conflict=false" >> $GITHUB_OUTPUT
 
