--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -76,7 +76,8 @@ jobs:
               github.rest.issues.addLabels({
                 owner,
                 repo,
-                issue_number: result.data.number
+                issue_number: result.data.number,
+                labels: ['backport']
               });
 
     #if: startsWith(github.event.label.name, 'backport-')
