--- a/.github/workflows/check-backport.yml
+++ b/.github/workflows/check-backport.yml
@@ -18,14 +18,23 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const labels = context.payload.pull_request.labels.map(l => l.name)
+          const { data: pullRequest } = await github.rest.pulls.get({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            pull_number: context.payload.pull_request.number,
+          });
+          
+          const labels = pullRequest.labels.map(l => l.name);
           const targets = labels
             .filter(l => l.startsWith("backport-"))
-            .map(l => l.replace("backport-", ""))
-
-          core.setOutput("targets", JSON.stringify(targets))
+            .map(l => l.replace("backport-", ""));
+          
+          core.setOutput("targets", JSON.stringify(targets));
+    outputs:
+      targets: ${{ steps.prepare-parameters.outputs.targets }}
 
   backport:
+    if: needs.prepare.outputs.targets != '[]'
     runs-on: ubuntu-latest
     needs: prepare
     strategy:
@@ -95,3 +104,5 @@ jobs:
       # Vystupem bude muset byt parametr pro matrix job, protoze muze byt PR zavrene
       #   napr. s dvema labely backport-A a backport-B
       # musi mit jako output JSON.stringify([ targets ])
+
+      # const labels = context.payload.pull_request.labels.map(l => l.name) -> je nutne použit rest, uzavrene PR asi nevraci všechny labels
