--- a/.github/workflows/check-backport.yml
+++ b/.github/workflows/check-backport.yml
@@ -18,16 +18,26 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const { data: pullRequest } = await github.rest.pulls.get({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            pull_number: context.payload.pull_request.number,
-          });
+          const event = context.payload.action;
+          let targets = [];
           
-          const labels = pullRequest.labels.map(l => l.name);
-          const targets = labels
-            .filter(l => l.startsWith("backport-"))
-            .map(l => l.replace("backport-", ""));
+          if (event == "labeled") {
+            const label = context.payload.label.name;
+          if (label.startsWith("backport=")){
+              targets = [label.replace("backport-", "")];
+            }
+          }else if (event == "closed") {
+            const { data: pullRequest } = await github.rest.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number,
+            });
+          
+            targets = pullRequest.labels
+              .map(l => l.name)
+              .filter(l => l.startsWith("backport-"))
+              .map(l => l.replace("backport-", ""))
+          }
           
           core.setOutput("targets", JSON.stringify(targets));
     outputs:
