--- a/.github/workflows/check-backport.yml
+++ b/.github/workflows/check-backport.yml
@@ -15,6 +15,7 @@ jobs:
     name: Prepare parameters
     steps:
     - name: Prepare parameters
+      id: prepare-parameters
       uses: actions/github-script@v7
       with:
         script: |
