--- a/.github/workflows/check-backport.yml
+++ b/.github/workflows/check-backport.yml
@@ -27,7 +27,6 @@ jobs:
             if (label.startsWith("backport-")){
               targets = [label.replace("backport-", "")];
             }
-            console.log(targets);
           }else if (event == "closed") {
             const { data: pullRequest } = await github.rest.pulls.get({
               owner: context.repo.owner,
@@ -39,9 +38,7 @@ jobs:
               .map(l => l.name)
               .filter(l => l.startsWith("backport-"))
               .map(l => l.replace("backport-", ""))
-            console.log(targets);
           }
-          console.log(JSON.stringify(targets));
           core.setOutput("targets", JSON.stringify(targets));
     outputs:
       targets: ${{ steps.prepare-parameters.outputs.targets }}
@@ -103,7 +100,7 @@ jobs:
           script: |
               const { repo, owner } = context.repo;
               const result = await github.rest.pulls.create({
-                title: `Backport PR #${context.issue.number} to ${process.env.BACKPORT_TARGET}',
+                title: `Backport PR #${context.issue.number} to ${process.env.BACKPORT_TARGET}`,
                 owner,
                 repo,
                 head: process.env.BACKPORT_BRANCH,
