--- a/.github/workflows/check-backport.yml
+++ b/.github/workflows/check-backport.yml
@@ -29,7 +29,7 @@ jobs:
               }
             } else if (event == "closed") {
               const labels = context.payload.pull_request.labels.map(l => l.name)
-              const targets = labels
+              targets = labels
                 .filter(l => l.startsWith("backport-"))
                 .map(l => l.replace("backport-", ""))
             }
