--- a/.github/workflows/backport-reuse.yml
+++ b/.github/workflows/backport-reuse.yml
@@ -7,6 +7,7 @@ jobs:
   test:
     uses: pepepopo-bot/workflows/.github/workflows/backport-workflow.yml@main
     with:
+      action: ${{ github.event.action }}
       label: ${{ github.event.action == 'labeled' && github.event.label.name || '' }}
       pull_request: ${{ toJSON(github.event.pull_request) }}
     permissions:
