--- a/.github/workflows/backport-reuse.yml
+++ b/.github/workflows/backport-reuse.yml
@@ -1,16 +1,18 @@
-name: backport-reuse
+name: backport-reuse.yml
 on:
   pull_request_target:
     types: ["closed", "labeled"]
 
 jobs:
-  test:
+  backport:
     uses: pepepopo-bot/workflows/.github/workflows/backport-workflow.yml@main
     with:
       action: ${{ github.event.action }}
       label: ${{ github.event.action == 'labeled' && github.event.label.name || '' }}
       pull_request: ${{ toJSON(github.event.pull_request) }}
+      pr_number: ${{ github.event.pull_request.number }}
     permissions:
       contents: write
       pull-requests: write
+
 
